Establish QAagentic Platform constitution with microservice architecture principles and update all submodules

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 # Database settings
-DATABASE_URL=postgresql+asyncpg://user:password@localhost/qagentic
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/qagentic
+
+# Individual database settings (used as fallback if DATABASE_URL is not set)
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=qagentic
 
 # API settings
 API_HOST=0.0.0.0
@@ -7,7 +14,10 @@ API_PORT=8082
 LOG_LEVEL=INFO
 
 # CORS settings
-ALLOW_ORIGINS=http://localhost:3000,http://localhost:8080
+ALLOW_ORIGINS=http://ui:3000,http://api:8080
+ALLOW_ORIGIN_REGEX=
+ALLOW_CREDENTIALS=true
+ALLOW_METHODS=GET,POST,PUT,DELETE,OPTIONS
 
 # Analytics settings
 EMBEDDING_MODEL=all-MiniLM-L6-v2
